tests/ui/fail/nightly/stmt_expr.stderr
error: `#[with]` can only be applied to an `fn`, a `trait`, or an `impl`.
  --> tests/ui/fail/nightly/stmt_expr.rs:12:13
   |
12 |     let _ = #[with] expr();
   |             ^^^^^^^
   |
   = note: this error originates in the attribute macro `with` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `#[with]` can only be applied to an `fn`, a `trait`, or an `impl`.
 --> tests/ui/fail/nightly/stmt_expr.rs:6:5
  |
6 |     #[with]
  |     ^^^^^^^
  |
  = note: this error originates in the attribute macro `with` (in Nightly builds, run with -Z macro-backtrace for more info)
